try another way

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,6 +13,6 @@
         <li class="list-item"><a href="/about">About</a></li>
       </ul>
     </nav>
-    This About Page
+    <h2>This About Page</h2>
   </body>
 </html>
