--- a/pages/contacat.html
+++ b/pages/contacat.html
@@ -13,6 +13,6 @@
         <li class="list-item"><a href="/about">About</a></li>
       </ul>
     </nav>
-    This Contact Page
+    <h2>This Contact Page</h2>
   </body>
 </html>
