--- a/pages/error.html
+++ b/pages/error.html
@@ -13,6 +13,6 @@
         <li class="list-item"><a href="/about">About</a></li>
       </ul>
     </nav>
-    404 NOT FOUND
+    <h1>404 NOT FOUND</h1>
   </body>
 </html>
